--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,8 +5,13 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_feed"
+            android:icon="@drawable/baseline_article_black_24dp"
+            android:title="@string/menu_feed" />
+
+        <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/baseline_home_black_24dp"
             android:title="@string/menu_home" />
         <item
             android:id="@+id/nav_gallery"
@@ -14,7 +19,7 @@
             android:title="@string/menu_gallery" />
         <item
             android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/round_settings_black_24dp"
             android:title="@string/menu_slideshow" />
     </group>
 </menu>
