--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -10,16 +10,8 @@
             android:title="@string/menu_feed" />
 
         <item
-            android:id="@+id/nav_home"
-            android:icon="@drawable/baseline_home_black_24dp"
-            android:title="@string/menu_home" />
-        <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
-        <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/round_settings_black_24dp"
-            android:title="@string/menu_slideshow" />
+            android:id="@+id/nav_auth"
+            android:icon="@drawable/ic_menu_auth"
+            android:title="@string/menu_auth" />
     </group>
 </menu>
