--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,29 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@+id/nav_feed">
 
     <fragment
         android:id="@+id/nav_feed"
         android:name="com.sih.conduitclone.ui.feed.GlobalFeedFragment"
         android:label="@string/menu_feed"
         tools:layout="@layout/fragment_feed" />
-
     <fragment
-        android:id="@+id/nav_home"
-        android:name="com.sih.conduitclone.ui.home.HomeFragment"
-        android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        android:id="@+id/nav_auth"
+        android:name="com.sih.conduitclone.ui.auth.AuthFragment"
+        android:label="@string/menu_auth"
+        tools:layout="@layout/fragment_auth" />
 
-    <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.sih.conduitclone.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
-
-    <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.sih.conduitclone.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
 </navigation>
