--- a/app/src/main/res/layout/fragment_auth.xml
+++ b/app/src/main/res/layout/fragment_auth.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <fragment
         android:id="@+id/authFragmentNavHost"
         android:name="androidx.navigation.fragment.NavHostFragment"
+        app:navGraph="@navigation/navigation_auth"
+        app:defaultNavHost="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
@@ -17,15 +19,15 @@
         android:layout_gravity="bottom">
 
         <com.google.android.material.tabs.TabItem
-            android:icon="@drawable/baseline_signup_24dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Monday" />
-
-        <com.google.android.material.tabs.TabItem
             android:icon="@drawable/baseline_login_24dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Login" />
+
+        <com.google.android.material.tabs.TabItem
+            android:icon="@drawable/baseline_signup_24dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="SignUp" />
     </com.google.android.material.tabs.TabLayout>
 </FrameLayout>
